fixed: jumping footer bug

--- a/style.css
+++ b/style.css
@@ -246,9 +246,13 @@ footer a {
 
 
 @media only screen and (max-width: 960px) {
+    main {
+        min-height: calc(100vh - 20rem);
+    }
     footer {
         height: max-content;
         position: relative;
+        bottom: 0;
     }
     footer ul {
         flex-direction: column;
@@ -381,7 +385,7 @@ footer a {
 @media only screen and (max-width: 960px) {
     .contact-form {
         width: 80%;
-        /* align-items: flex-start; */
+        margin-bottom: 1rem;
         padding: 1rem;
     }
     .input-wrapper {
